# xiui

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  server.js
backend/: pyproject.toml
backend/data/courses/: computer_vision.json
backend/src/xiui_agent/: __init__.py  agent.py  server.py  tools.py
examples/: basic.html  chat.html  index.html  learning-assistant.html
frontend/: package.json  server.js
frontend/examples/: index.html
frontend/lib/: hljs-bundle.js  hljs-core.mjs
frontend/src/: message-manager.js  xiui.js
spec/: prompt.md  xiui-protocol.md
src/: collector.js  index.js  message-manager.js  parser.js  renderer.js  xiui.js
