[project]
name = "xiui-agent"
version = "0.1.0"
description = "XIUI Agent Backend — AI 智能体服务端"
readme = "../README.md"
license = { text = "MIT" }
authors = [
    { name = "nksix", email = "136230339@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
xiui-agent = "xiui_agent:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = []
