[project]
name = "xiui-agent"
version = "0.1.0"
description = "XIUI Agent Backend — 自适应学习智能体"
readme = "../README.md"
license = { text = "MIT" }
authors = [
    { name = "nksix", email = "136230339@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
xiui-agent = "xiui_agent:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = []
